frontend-v2/src/styles/globals.css
@import "tailwindcss";

@custom-variant dark (&:is(.dark *));

:root {
    --font-size: 16px;
    --background: #ffffff;
    --foreground: #0a0a0a;
    --card: #ffffff;
    --card-foreground: #0a0a0a;
    --popover: #ffffff;
    --popover-foreground: #0a0a0a;
    --primary: #030213;
    --primary-foreground: #ffffff;
    --secondary: #ececf0;
    --secondary-foreground: #030213;
    --muted: #ececf0;
    --muted-foreground: #717182;
    --accent: #e9ebef;
    --accent-foreground: #030213;
    --destructive: #d4183d;
    --destructive-foreground: #ffffff;
    --border: rgba(0, 0, 0, 0.1);
    --input: transparent;
    --input-background: #f3f3f5;
    --switch-background: #cbced4;
    --ring: #b3b3b3;
    --chart-1: #e76f51;
    --chart-2: #2a9d8f;
    --chart-3: #264653;
    --chart-4: #e9c46a;
    --chart-5: #f4a261;
    --radius: 0.625rem;
    --sidebar: #fafafa;
    --sidebar-foreground: #0a0a0a;
    --sidebar-primary: #030213;
    --sidebar-primary-foreground: #fafafa;
    --sidebar-accent: #f5f5f5;
    --sidebar-accent-foreground: #1a1a1a;
    --sidebar-border: #e5e5e5;
    --sidebar-ring: #b3b3b3;
}

.dark {
    --background: #0a0a0a;
    --foreground: #fafafa;
    --card: #141414;
    --card-foreground: #fafafa;
    --popover: #0a0a0a;
    --popover-foreground: #fafafa;
    --primary: #fafafa;
    --primary-foreground: #1a1a1a;
    --secondary: #262626;
    --secondary-foreground: #fafafa;
    --muted: #262626;
    --muted-foreground: #b3b3b3;
    --accent: #262626;
    --accent-foreground: #fafafa;
    --destructive: #7f1d1d;
    --destructive-foreground: #ef4444;
    --border: #262626;
    --input: #262626;
    --ring: #525252;
    --chart-1: #3b82f6;
    --chart-2: #34d399;
    --chart-3: #f4a261;
    --chart-4: #a855f7;
    --chart-5: #ef4444;
    --sidebar: #1a1a1a;
    --sidebar-foreground: #fafafa;
    --sidebar-primary: #3b82f6;
    --sidebar-primary-foreground: #fafafa;
    --sidebar-accent: #262626;
    --sidebar-accent-foreground: #fafafa;
    --sidebar-border: #262626;
    --sidebar-ring: #525252;
}

@theme inline {
    --color-background: var(--background);
    --color-foreground: var(--foreground);
    --color-card: var(--card);
    --color-card-foreground: var(--card-foreground);
    --color-popover: var(--popover);
    --color-popover-foreground: var(--popover-foreground);
    --color-primary: var(--primary);
    --color-primary-foreground: var(--primary-foreground);
    --color-secondary: var(--secondary);
    --color-secondary-foreground: var(--secondary-foreground);
    --color-muted: var(--muted);
    --color-muted-foreground: var(--muted-foreground);
    --color-accent: var(--accent);
    --color-accent-foreground: var(--accent-foreground);
    --color-destructive: var(--destructive);
    --color-destructive-foreground: var(--destructive-foreground);
    --color-border: var(--border);
    --color-input: var(--input);
    --color-input-background: var(--input-background);
    --color-switch-background: var(--switch-background);
    --color-ring: var(--ring);
    --color-chart-1: var(--chart-1);
    --color-chart-2: var(--chart-2);
    --color-chart-3: var(--chart-3);
    --color-chart-4: var(--chart-4);
    --color-chart-5: var(--chart-5);
    --radius-sm: calc(var(--radius) - 4px);
    --radius-md: calc(var(--radius) - 2px);
    --radius-lg: var(--radius);
    --color-sidebar: var(--sidebar);
    --color-sidebar-foreground: var(--sidebar-foreground);
    --color-sidebar-primary: var(--sidebar-primary);
    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
    --color-sidebar-accent: var(--sidebar-accent);
    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
    --color-sidebar-border: var(--sidebar-border);
    --color-sidebar-ring: var(--sidebar-ring);
}

@layer base {
    * {
        @apply border-border;
    }

    body {
        @apply bg-background text-foreground overflow-hidden;
        -webkit-font-smoothing: antialiased;
        -moz-osx-font-smoothing: grayscale;
    }
}

/**
 * Base typography. This is not applied to elements which have an ancestor with a Tailwind text class.
 */
@layer base {
    :where(:not(:has([class*=' text-']), :not(:has([class^='text-'])))) {
        h1 {
            font-size: var(--text-2xl);
            font-weight: var(--font-weight-medium);
            line-height: 1.5;
        }

        h2 {
            font-size: var(--text-xl);
            font-weight: var(--font-weight-medium);
            line-height: 1.5;
        }

        h3 {
            font-size: var(--text-lg);
            font-weight: var(--font-weight-medium);
            line-height: 1.5;
        }

        h4 {
            font-size: var(--text-base);
            font-weight: var(--font-weight-medium);
            line-height: 1.5;
        }

        p {
            font-size: var(--text-base);
            font-weight: var(--font-weight-normal);
            line-height: 1.5;
        }

        label {
            font-size: var(--text-base);
            font-weight: var(--font-weight-medium);
            line-height: 1.5;
        }

        button {
            font-size: var(--text-base);
            font-weight: var(--font-weight-medium);
            line-height: 1.5;
        }

        input {
            font-size: var(--text-base);
            font-weight: var(--font-weight-normal);
            line-height: 1.5;
        }
    }
}

html {
    font-size: var(--font-size);
}

